# algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
collections/: linked_list.cpp  linked_list.h  queue.cpp  queue.h  stack.cpp  stack.h
expressions/: arithmetic.cpp  arithmetic.h
tests/: test_expressions.cpp  test_linked_list.cpp  test_queue.cpp  test_stack.cpp  test_stack_list.cpp
